# gooder-reads

./: Dockerfile  LICENSE  README.md  docker-compose.yml  get_books_on_shelf.py  get_reviews.py  pyproject.toml  recommend_books.py
