[tool.isort]
multi_line_output = 3
force_alphabetical_sort_within_sections = true
line_length = 99
profile = "black"

[tool.poetry]
name = "gooder-reads"
version = "0.1.0"
description = "Goodreads, but gooder"
authors = ["Mariel Bartolome <marielbartolome@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
selenium = "^4.1.0"
lxml = "^4.7.1"
geckodriver-autoinstaller = "^0.1.0"
webdriver-manager = "^3.5.2"
regex = "^2022.1.18"
credentials = "^1.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
